# Auto-commit-tool

./: .gitignore  CHANGELOG.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  LICENSE  README.md  committer.py  config.json  main.py  pyproject.toml  scanner.py
.github/workflows/: ci.yml  release.yml
src/auto_committer/: __init__.py  __main__.py  cli.py  committer.py  config.py  scanner.py  utils.py
tests/: __init__.py  test_committer.py  test_scanner.py
