[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-auto-committer"
version = "1.0.0"
description = "Production CLI tool for automated git commits with custom dates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "lovelybugf"}
]
keywords = ["git", "automation", "commit", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
auto-committer = "auto_committer.cli:main"

[project.urls]
Homepage = "https://github.com/lovelybugf/Auto-commit-tool"
Repository = "https://github.com/lovelybugf/Auto-commit-tool"
Issues = "https://github.com/lovelybugf/Auto-commit-tool/issues"
Changelog = "https://github.com/lovelybugf/Auto-commit-tool/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]
